<resources>
    <string name="app_name">04 - Creación de Elementos por Código</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="crear">Crear Alumno</string>
    <string name="cancelar">Cancelar</string>
    <string-array name="spinner_ciclos">
        <item>Selecciona Ciclo</item>
        <item>DAM</item>
        <item>DAW</item>
        <item>SMR</item>
        <item>3D</item>
    </string-array>

</resources>